@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.17">
+<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.18">
   <requires>
     <!-- <import addon="xbmc.python" version="2.24.0"/> -->
     <import addon="script.module.beautifulsoup4" version="4.5.3" />
@@ -24,8 +24,8 @@
       <fanart>fanart.jpg</fanart>
     </assets>
     <news>
-Changelog 0.3.17 [20230207]:
-- Added New Setting "Show Changelog every update" 
+Changelog 0.3.18 [20230208]:
+- Fixed a small bug that is hardcoded.
     </news>
   </extension>
 </addon>
